--- a/archives.html
+++ b/archives.html
@@ -116,12 +116,30 @@
         </ul>
     </section>
 
+<section class="googleplus">
+  <h2>
+    <a href="https://plus.google.com/107320364406681905472?rel=author">
+      <img src="http://www.google.com/images/icons/ui/gprofile_button-32.png" width="32" height="32">
+      Google+
+    </a>
+  </h2>
+</section>
 </aside>    </div>
   </div>
   <footer role="contentinfo"><p>
   Copyright &copy; 2014 - Ekaterina Perzhu -
   <span class="credit">Powered by <a href="http://getpelican.com" target="_blank">Pelican</a></span>
 </p></footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-51056645-1', 'englishhood.me');
+      ga('send', 'pageview');
+
+    </script>
 
 
 <!-- Yandex.Metrika counter -->
@@ -151,5 +169,21 @@
 </script>
 <noscript><div><img src="//mc.yandex.ru/watch/24975140" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function(){
+      var twitterWidgets = document.createElement('script');
+      twitterWidgets.type = 'text/javascript';
+      twitterWidgets.async = true;
+      twitterWidgets.src = 'http://platform.twitter.com/widgets.js';
+      document.getElementsByTagName('head')[0].appendChild(twitterWidgets);
+    })();
+  </script>
+  <script type="text/javascript">
+    (function() {
+      var script = document.createElement('script'); script.type = 'text/javascript'; script.async = true;
+      script.src = 'https://apis.google.com/js/plusone.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(script, s);
+    })();
+  </script>
 </body>
 </html>
