--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ are very powerful and they convey an&nbsp;intention.</p>
 </blockquote>
 <div class="section" id="id1">
 <h2>Обо&nbsp;мне</h2>
-<p>Здравствуйте! Меня зовут Екатерина. Я частный преподаватель английского языка и
-профессиональный переводчик. Так случилось, что мне очень сильно повезло, и моя
-профессия стала моим призванием и&nbsp;хобби.</p>
+<p>Здравствуйте! Меня зовут Екатерина. Сейчас я живу в Санкт-Петербурге. Я частный
+преподаватель английского языка и профессиональный переводчик. Так случилось,
+что мне очень сильно повезло, и моя профессия стала моим призванием и&nbsp;хобби.</p>
 <p>Вы попали на мой сайт. Располагайтесь поудобнее и чувствуйте себя как дома!&nbsp;=)</p>
 </div>
 <div class="section" id="id2">
