--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -80,8 +80,8 @@
 <h2>Занятия с преподавателем&nbsp;&quot;тет-а-тет&quot;</h2>
 <blockquote>
 Для учеников от 10 лет.</blockquote>
-<p>Занятия провожу у учеников, если они живут в пешей доступности от метро, либо
-в кафе или у себя&nbsp;дома.</p>
+<p>Я живу в Санкт-Петербурге. Занятия провожу у учеников, если они живут в пешей
+доступности от метро, либо в кафе или у себя&nbsp;дома.</p>
 <blockquote>
 Стоимость занятий &quot;тет-а-тет&quot; 800-1000 рублей за 60 минут
 (<em>в зависимости от уровня и подготовки ученика</em>)</blockquote>
