--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@ are very powerful and they convey an&nbsp;intention.</p>
 <h2>Для кого этот&nbsp;сайт?</h2>
 <p>Этот сайт для тех, кто не представляет своей жизни без английского языка.
 Для тех, кто хочет общаться на английском языке, смотреть фильмы на английском
-языке и, возможно, когда-нибудь научиться думать на английском&nbsp;языке.</p>
+языке и когда-нибудь научиться думать на английском&nbsp;языке.</p>
 <p>Этот сайт для тех, кому нужна помощь в устном или письменном переводе с русского
 на английский или с английского на&nbsp;русский.</p>
 <p>Этот сайт для тех, кто неравнодушен к истории Санкт-Петербурга и будет рад
 побродить по его улочкам и послушать увлекательные истории на английском&nbsp;языке.</p>
-<p>Этот сайт и для меня тоже.&nbsp;=)</p>
 </div>
 
   </article>
