--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -56,7 +56,7 @@
     </header>
     <div class="section" id="id1">
 <h2>Индивидуальные&nbsp;занятия</h2>
-<p>Для того чтобы знать и понимать язык нужно им постоянно заниматься.
+<p>Для того чтобы знать и понимать язык, нужно им постоянно заниматься.
 Честно признаюсь, я не признаю экспресс курсы английского языка.
 Реклама &quot;Английский язык за месяц&quot; вызывает у меня улыбку.
 Если бы экспресс курсы английского языка были столь эффективными, стали бы люди
@@ -112,7 +112,7 @@
 <h2>К чему я готовлю и чему&nbsp;обучаю</h2>
 <ul class="simple">
 <li>Разговорный английский для&nbsp;путешествий;</li>
-<li>Подготовка к&nbsp;интервью;</li>
+<li>Подготовка к&nbsp;собеседованию;</li>
 <li>Business English, отдельно веду курс English for Accountants, English for&nbsp;Lawyers;</li>
 <li>Подготовка к международным экзаменам (<span class="caps">TOEFL</span>, <span class="caps">IELTS</span>);</li>
 <li>Помогаю &quot;подтянуть&quot; английский по школьной&nbsp;программе.</li>
